--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -33,13 +33,17 @@
     }
 }
 
-/* Genereal Styles */
+/* General Styles */
+
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     background: var(--clr-light);
     color: var(--clr-dark);
     margin: 0;
-    font-family: var(--ff-primay);
+    font-family: var(--ff-primary);
     font-size: var(--fs-body);
     line-height: 1.6;
 }
@@ -128,13 +132,120 @@ h3 {
 .section__subtitle--work {
     color: var(--clr-accent);
     font-weight: var(--fw-bold);
-    text-align: center;
+    margin-bottom: 2em;
 }
 
 /* header */
-nav {
-    display: none
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
 }
+
+.logo {
+    max-width: 100px;
+}
+
+nav {
+    position: fixed;
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+
+
+}
+
+.nav__list {
+    list-style: none;
+    display: fllex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.nav__link {
+    color: inherit;
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-h2);
+    text-decoration: none;
+}
+
+.nav__link:hover {
+    color: var(--clr-accent);
+}
+
+.nav-toggle {
+    padding: .5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 1000;
+
+}
+
+.nav-open .nav {
+    transform: translateX(0)
+}
+
+.nav-open .nav-toggle {
+    position: fixed;
+}
+
+.nav-open .hamburger {
+    transform: rotate(.625turn);
+}
+
+.nav-open .hamburger::before{
+    transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after {
+    opacity: 0;
+}
+
+.hamburger {
+    display: block;
+    position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+    background: var(--clr-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+
+}
+
+.hamburger::before,
+.hamburger::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.hamburger::before { top: 6px;}
+.hamburger::after {bottom: 6px;}
+
+
+
 
 /* Intro section */
 
@@ -155,6 +266,7 @@ nav {
     .intro {
         display: grid;
         width: min-content;
+        margin: 0 auto;
         grid-column-gap: 1em;
         grid-template-areas:
             "img title"
@@ -164,7 +276,7 @@ nav {
 
     .intro img {
         grid-area: img;
-        min-width: 250px;
+        min-width: 325px;
         position: relative;
         z-index: 2;
     }
@@ -216,6 +328,23 @@ nav {
     margin: 0 auto;
 }
 
+.skills {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+    margin-bottom: 2rem;
+    width: 800px;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.icon {
+        width: 75px;
+        height: 75px;
+        margin: 15px;
+}
+
 @media (min-width: 800px) {
     .services {
         display: flex;
@@ -243,10 +372,9 @@ nav {
 
 @media (min-width: 600px) {
     .about-me {
-        display: grid;
         grid-template-columns: 1fr 200px;
         grid-template-areas:
-            "tit;e img"
+            "title img"
             "subtitle img"
             "text img";
         grid-column-gap: 2em;
@@ -292,16 +420,17 @@ nav {
 }
 
 .portfolio__item {
-    background: var(--clr-accent);
     overflow: hidden;
+    margin: 0 auto;
 }
 
 .portfolio__img {
-    transition:
+    transition: 
         transform 750ms cubic-bezier(.5, 0, .5, 1),
         opacity 250ms linear;
-
+        width: 40rem;
 }
+
 
 .portfolio__item:focus {
     position:relative;
@@ -312,4 +441,64 @@ nav {
 .portfolio__item:focus .portfolio__img {
     transform: scale(1.2);
     opacity: .80;
+}
+
+/* footer styling */
+
+.footer {
+    background:#111;
+    color: var(--clr-accent);
+    text-align: center;
+    padding: 2.5em 0;
+    font-size: var(--fs-h3);
+}
+
+.footer a { 
+    color: inherit;
+text-decoration: none; 
+}
+
+.footer__link {
+    font-weight: var(--fw-bold);
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+    opacity: .7;
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em 0 0;
+    padding: 0
+}
+
+.social-list__item {
+    margin: 0 .5em;
+}
+
+.social_list__link {
+    padding: .5em;
+}
+
+
+/* individual portfolio styles */
+
+.portfolio-item-individual {
+    padding: 0 2em 2em;
+    max-width: 1000px;
+    margin: 0 auto;
+
+}
+
+.portfolio-item-individual p {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
